@@ -1,35 +1,17 @@
 /*
- * MIT License
- *
- * Copyright (c) 2020 Airbyte
- *
- * Permission is hereby granted, free of charge, to any person obtaining a copy
- * of this software and associated documentation files (the "Software"), to deal
- * in the Software without restriction, including without limitation the rights
- * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the Software is
- * furnished to do so, subject to the following conditions:
- *
- * The above copyright notice and this permission notice shall be included in all
- * copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
- * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
- * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
- * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
- * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
- * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
- * SOFTWARE.
+ * Copyright (c) 2023 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.integrations.destination.pubsub;
 
 import static com.google.common.base.Strings.nullToEmpty;
-import static io.airbyte.integrations.destination.pubsub.PubsubDestination.CONFIG_CREDS;
-import static io.airbyte.integrations.destination.pubsub.PubsubDestination.CONFIG_PROJECT_ID;
-import static io.airbyte.integrations.destination.pubsub.PubsubDestination.CONFIG_TOPIC_ID;
 import static io.airbyte.integrations.destination.pubsub.PubsubDestination.NAMESPACE;
 import static io.airbyte.integrations.destination.pubsub.PubsubDestination.STREAM;
+import static io.airbyte.integrations.destination.pubsub.PubsubDestinationConfig.CONFIG_BATCHING_ENABLED;
+import static io.airbyte.integrations.destination.pubsub.PubsubDestinationConfig.CONFIG_CREDS;
+import static io.airbyte.integrations.destination.pubsub.PubsubDestinationConfig.CONFIG_ORDERING_ENABLED;
+import static io.airbyte.integrations.destination.pubsub.PubsubDestinationConfig.CONFIG_PROJECT_ID;
+import static io.airbyte.integrations.destination.pubsub.PubsubDestinationConfig.CONFIG_TOPIC_ID;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
@@ -53,15 +35,19 @@ import com.google.pubsub.v1.ReceivedMessage;
 import com.google.pubsub.v1.Subscription;
 import com.google.pubsub.v1.Topic;
 import com.google.pubsub.v1.TopicName;
+import io.airbyte.cdk.integrations.base.JavaBaseConstants;
+import io.airbyte.cdk.integrations.standardtest.destination.DestinationAcceptanceTest;
+import io.airbyte.cdk.integrations.standardtest.destination.comparator.AdvancedTestDataComparator;
+import io.airbyte.cdk.integrations.standardtest.destination.comparator.TestDataComparator;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.string.Strings;
-import io.airbyte.integrations.base.AirbyteStreamNameNamespacePair;
-import io.airbyte.integrations.base.JavaBaseConstants;
-import io.airbyte.integrations.standardtest.destination.DestinationAcceptanceTest;
+import io.airbyte.protocol.models.v0.AirbyteStreamNameNamespacePair;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -104,22 +90,42 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
     return true;
   }
 
-  private AirbyteStreamNameNamespacePair fromJsonNode(JsonNode j) {
-    var stream = j.get(STREAM).asText("");
-    var namespace = j.get(NAMESPACE).asText("");
+  private AirbyteStreamNameNamespacePair fromJsonNode(final JsonNode j) {
+    final var stream = j.get(STREAM).asText("");
+    final var namespace = j.get(NAMESPACE).asText("");
     return new AirbyteStreamNameNamespacePair(stream, namespace);
   }
 
   @Override
-  protected List<JsonNode> retrieveRecords(TestDestinationEnv testEnv,
-                                           String streamName,
-                                           String namespace,
-                                           JsonNode streamSchema)
+  protected TestDataComparator getTestDataComparator() {
+    return new AdvancedTestDataComparator();
+  }
+
+  @Override
+  protected boolean supportBasicDataTypeTest() {
+    return true;
+  }
+
+  @Override
+  protected boolean supportArrayDataTypeTest() {
+    return true;
+  }
+
+  @Override
+  protected boolean supportObjectDataTypeTest() {
+    return true;
+  }
+
+  @Override
+  protected List<JsonNode> retrieveRecords(final TestDestinationEnv testEnv,
+                                           final String streamName,
+                                           final String namespace,
+                                           final JsonNode streamSchema)
       throws IOException {
     if (records.isEmpty()) {
       // first time retrieving records, retrieve all and keep locally for easier
       // verification
-      SubscriberStubSettings subscriberStubSettings =
+      final SubscriberStubSettings subscriberStubSettings =
           SubscriberStubSettings.newBuilder()
               .setCredentialsProvider(FixedCredentialsProvider.create(credentials))
               .setTransportChannelProvider(
@@ -127,8 +133,8 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
                       .setCredentials(credentials)
                       .build())
               .build();
-      try (SubscriberStub subscriber = GrpcSubscriberStub.create(subscriberStubSettings)) {
-        PullRequest pullRequest =
+      try (final SubscriberStub subscriber = GrpcSubscriberStub.create(subscriberStubSettings)) {
+        final PullRequest pullRequest =
             PullRequest.newBuilder()
                 .setMaxMessages(1000)
                 .setSubscription(subscriptionName.toString())
@@ -138,11 +144,11 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
             .call(pullRequest);
         var list = pullResponse.getReceivedMessagesList();
         do {
-          List<String> ackIds = Lists.newArrayList();
-          for (ReceivedMessage message : list) {
-            var m = message.getMessage();
-            var s = m.getAttributesMap().get(STREAM);
-            var n = m.getAttributesMap().get(NAMESPACE);
+          final List<String> ackIds = Lists.newArrayList();
+          for (final ReceivedMessage message : list) {
+            final var m = message.getMessage();
+            final var s = m.getAttributesMap().get(STREAM);
+            final var n = m.getAttributesMap().get(NAMESPACE);
             records.add(Jsons.jsonNode(ImmutableMap.of(
                 STREAM, nullToEmpty(s),
                 NAMESPACE, nullToEmpty(n),
@@ -152,7 +158,7 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
           }
           if (!ackIds.isEmpty()) {
             // Acknowledge received messages.
-            AcknowledgeRequest acknowledgeRequest =
+            final AcknowledgeRequest acknowledgeRequest =
                 AcknowledgeRequest.newBuilder()
                     .setSubscription(subscriptionName.toString())
                     .addAllAckIds(ackIds)
@@ -180,7 +186,7 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
   }
 
   @Override
-  protected void setup(TestDestinationEnv testEnv) throws Exception {
+  protected void setup(final TestDestinationEnv testEnv, final HashSet<String> TEST_SCHEMAS) throws Exception {
     if (!Files.exists(CREDENTIALS_PATH)) {
       throw new IllegalStateException(
           "Must provide path to a gcp service account credentials file. By default {module-root}/"
@@ -188,7 +194,7 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
               + ". Override by setting setting path with the CREDENTIALS_PATH constant.");
     }
 
-    final String credentialsJsonString = new String(Files.readAllBytes(CREDENTIALS_PATH));
+    final String credentialsJsonString = Files.readString(CREDENTIALS_PATH);
 
     final JsonNode credentialsJson = Jsons.deserialize(credentialsJsonString);
     final String projectId = credentialsJson.get(CONFIG_PROJECT_ID).asText();
@@ -199,17 +205,20 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
         .put(CONFIG_PROJECT_ID, projectId)
         .put(CONFIG_CREDS, credentialsJsonString)
         .put(CONFIG_TOPIC_ID, topicId)
+        .put(CONFIG_BATCHING_ENABLED, true)
+        .put(CONFIG_ORDERING_ENABLED, true)
         .build());
 
     credentials =
         ServiceAccountCredentials
-            .fromStream(new ByteArrayInputStream(configJson.get(CONFIG_CREDS).asText().getBytes()));
+            .fromStream(new ByteArrayInputStream(configJson.get(CONFIG_CREDS).asText().getBytes(
+                StandardCharsets.UTF_8)));
     // create topic
     topicName = TopicName.of(projectId, topicId);
     topicAdminClient = TopicAdminClient
         .create(TopicAdminSettings.newBuilder().setCredentialsProvider(
             FixedCredentialsProvider.create(credentials)).build());
-    Topic topic = topicAdminClient.createTopic(topicName);
+    final Topic topic = topicAdminClient.createTopic(topicName);
     LOGGER.info("Created topic: " + topic.getName());
 
     // create subscription - with ordering, cause tests expect it
@@ -218,7 +227,7 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
         SubscriptionAdminSettings.newBuilder()
             .setCredentialsProvider(FixedCredentialsProvider.create(credentials))
             .build());
-    Subscription subscription =
+    final Subscription subscription =
         subscriptionAdminClient.createSubscription(
             Subscription.newBuilder().setName(subscriptionName.toString())
                 .setTopic(topicName.toString()).setEnableMessageOrdering(true)
@@ -235,7 +244,7 @@ public class PubsubDestinationAcceptanceTest extends DestinationAcceptanceTest {
   }
 
   @Override
-  protected void tearDown(TestDestinationEnv testEnv) {
+  protected void tearDown(final TestDestinationEnv testEnv) {
     // delete subscription
     if (subscriptionAdminClient != null && subscriptionName != null) {
       subscriptionAdminClient.deleteSubscription(subscriptionName);
